tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern1.sk
base class MyBase
class Foo() extends MyBase

fun foo(x: MyBase): void {
  x match {
  | null -> _ = null
  | Foo() -> void
  }
}

fun main(): void {
  print_string("OK")
}
